odoo-web.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: odoo-app
spec:
  type: NodePort
  selector:
    app: odoo
    module: frontend
  ports:
    - protocol: TCP
      port: 8069
      targetPort: 8069
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-web
  namespace: odoo-app
  labels:
    app: odoo
    module: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: odoo
      module: frontend
  template:
    metadata:
      labels:
        app: odoo
        module: frontend
    spec:
      containers:
      - name: odoo
        image: odoo:14.0
        #command: ["/bin/sh"]
        #args:
        #- -c
        #- >-
         #chmod 777 /etc/odoo/odoo.conf
         # odoo -i base -d odoo --db_host 172.104.146.224 -r odoo -w odoo --stop-after-init
        ports:
        - containerPort: 8069
        volumeMounts:
        - name: odoo-web-data
          mountPath: /var/lib/odoo

        - name: config
          mountPath: /etc/odoo
        - name: enterprise
          mountPath: /mnt/enterprise
        - name: addons-portnet
          mountPath: /mnt/PortnetV14
        - name: bitbucket
          mountPath: /mnt/bitbucket
      volumes:
      - name: odoo-web-data
        persistentVolumeClaim:
          claimName: nfs-odoo-pvc
      - name: config
        configMap:
          defaultMode: 0777
          name: config-webconfig
      - name: enterprise
        hostPath:
          path: /enterprise
      - name: addons-portnet
        hostPath:
          path: /addons/PortnetV14
      - name: bitbucket
        hostpath:
          path: /home/odoo/dev
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: odoo-web-data
#   namespace: odoo-app
#   labels:
#     app: odoo
# spec:
#   storageClassName: manual
#   accessModes:
#     - ReadWriteMany
#   resources:
#     requests:
#       storage: 5Gi
